# ggen

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: candidate_selection_analysis.md  mp_relaxation_analysis.md  p1_symmetry_investigation_report.md
examples/: 01_quick_start.ipynb  02_chemistry_exploration.ipynb  03_structure_mutations.ipynb  chemistry_exploration.ipynb  genetic.ipynb
ggen/: __init__.py  calculator.py  cli.py  colors.py  database.py  elements.py  explorer.py  ggen.py  operations.py  phonons.py  report.py  scout.py  utils.py
scripts/: analyze_mp_relaxation_changes.py  backfill_phonons.py  backfill_space_groups.py  check_thermal.py  dashboard.py  discoveries.py  explore.py  explore_parallel.py  explore_system.py  export.py  ggen  import.py  modal.py  modal_run.py  phonons.py  relax.py  report.py  scout.py  ternary_surface.py
scripts/dev/: analyze_p1_symmetry.py  challenge_p1_ground_states.py  explore_higher_symmetry.py  migrate_to_unified_db.py  test_selection_heuristics.py  trial_convergence.py
